--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             const block = document.createElement('div');
             block.className = 'game-block';
             block.innerHTML = `
-                <img src="${game.cover}" alt="${game.title}">
+                <img src="https://raw.githubusercontent.com/lmaogoodcodenotreally/GBC-Classics/main/${game.cover}" alt="${game.title}">
                 <div class="game-title">${game.title}</div>
                 <div class="game-info">
                     <strong>Platform:</strong> ${game.platform}<br>
